# VU-OP-Task-2-Pazymiu-skaiciuokle

./: .clang-format  .cpp-pp.json  .gitignore  CMakeLists.txt  Console.hpp  Definitions.hpp  File.hpp  Math.hpp  README.md  RND.hpp  Student.hpp  Table.hpp  changelog.md  kursiokai.txt  main-array.cpp  main-vector.cpp  main.cpp  students test.txt
include/: Comparator.cpp  Comparator.hpp  Console.cpp  Console.hpp  Definitions.hpp  File.cpp  File.hpp  Grades.cpp  Grades.hpp  Math.cpp  Math.hpp  RND.cpp  RND.hpp  String.cpp  String.hpp  Student.cpp  Student.hpp  Students.cpp  Students.hpp  Table.cpp  Table.hpp  Timer.cpp  Timer.hpp  Utils.cpp  Utils.hpp
